objects/LAT_ContractWorflow__c.object
<CustomObject>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LAT_Fiscal_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionalClientOnPremise__c</fullName>
        <label>Regional Client On Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NNE Indireto</fullName>
                </value>
                <value>
                    <fullName>NNE Varejo</fullName>
                </value>
                <value>
                    <fullName>SPC Indireto</fullName>
                </value>
                <value>
                    <fullName>SPI Indireto</fullName>
                </value>
                <value>
                    <fullName>SUL Indireto</fullName>
                </value>
                <value>
                    <fullName>SP Varejo</fullName>
                </value>
                <value>
                    <fullName>SUL Varejo</fullName>
                </value>
                <value>
                    <fullName>SUD Indireto</fullName>
                </value>
                <value>
                    <fullName>SUD Varejo</fullName>
                </value>
                <value>
                    <fullName>CO Indireto</fullName>
                </value>
                <value>
                    <fullName>KA Varejo</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>ON TRADE NE 1</fullName>
                </value>
                <value>
                    <fullName>ON TRADE SPC</fullName>
                </value>
                <value>
                    <fullName>ON TRADE SPI</fullName>
                </value>
                <value>
                    <fullName>ON TRADE SUD</fullName>
                </value>
                <value>
                    <fullName>ON TRADE CO</fullName>
                </value>
                <value>
                    <fullName>ON TRADE SUL</fullName>
                </value>
                <value>
                    <fullName>ON TRADE NE 2</fullName>
                </value>
                <value>
                    <fullName>DRINKS&amp;CO</fullName>
                </value>
                <value>
                    <fullName>NBD</fullName>
                </value>
                <value>
                    <fullName>MATRIZ</fullName>
                </value>
                <value>
                    <fullName>REG CO</fullName>
                    <isActive>false</isActive>
                    <label>REG CO</label>
                </value>
                <value>
                    <fullName>REG DRINKS AND CO</fullName>
                    <isActive>false</isActive>
                    <label>REG DRINKS AND CO</label>
                </value>
                <value>
                    <fullName>REG NBD</fullName>
                    <isActive>false</isActive>
                    <label>REG NBD</label>
                </value>
                <value>
                    <fullName>REG NE</fullName>
                    <isActive>false</isActive>
                    <label>REG NE</label>
                </value>
                <value>
                    <fullName>REG NO</fullName>
                    <isActive>false</isActive>
                    <label>REG NO</label>
                </value>
                <value>
                    <fullName>REG PRESTIGE</fullName>
                    <isActive>false</isActive>
                    <label>REG PRESTIGE</label>
                </value>
                <value>
                    <fullName>REG SE</fullName>
                    <isActive>false</isActive>
                    <label>REG SE</label>
                </value>
                <value>
                    <fullName>REG SPC</fullName>
                    <isActive>false</isActive>
                    <label>REG SPC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WF__c</fullName>
        <label>Tipo WF</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkflowNumber__c</fullName>
        <label>Nr Atividade</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Atividades IMM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RegionalClientOnPremise__c</columns>
        <columns>FY__c</columns>
        <columns>WorkflowNumber__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>ACTIMM-{000000}</displayFormat>
        <label>ID Atividade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Atividades IMM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>